Changelog
=========

2020.3.0rc5 (unreleased)
------------------------

- Implement batching for the @solrsearch endpoint. [elioschmutz]
- Make available the delete action for templates. [mbaechtold]
- Drop import_stamp column from user model. [tinagerber]
- Define a set of columns that get synchronized in user and group model. [tinagerber]
- Handle depth filter in solrsearch endpoint. [njohner]
- Add OGDSGroupActor class. [njohner]
- Explicitly log to sentry for two `ftw.solr` modules we want to monitor well at the moment. [deiferni]
- Add @transfer-task endpoint to change issuer and responsible of a task. [tinagerber]
- Add possibility to suppress notification with X-GEVER-SuppressNotifications header. [tinagerber]
- Add @assigned-users endpoint to get all active users of the client. [tinagerber]
- Set Reply-To header from mails sent on behalf of users. [lgraf]
- Avoid sending mails with From-Addresses other than our own. [lgraf]
- Fix bug with setting issuer and informed_principals on forwardings. [njohner]
- Allow notifying users and groups when creating a new task. [njohner]
- Add last login information to user. [tinagerber]
- Bump ftw.casauth to 1.3.0 to handle login similar to PlonePAS in @caslogin endpoint. [tinagerber]
- Enable API endpoint `@document-from-template` for tasks. [mbaechtold]
- Support combined notation for task responsible in workflow transitions. [elioschmutz]
- Bump docxcompose to 1.1.2 to fix issues with external image references and drawing properties. [buchi]
- Always use configured solr port in tests. [2e12]


2020.3.0rc4 (2020-06-05)
------------------------

- Move the ogds groups import logger more up in the script to make debugging easier. [elioschmutz]
- Add `bumblebee_app_id` to the `@config` API endpoint. [mbaechtold]
- @teams: Order team members by last name. [lgraf]
- @ogds-groups: Order group members by last name. [lgraf]
- Bump ftw.solr to 2.8.6 to get logging improvements and filter helpers. [lgraf]